--- a/avaleht.html
+++ b/avaleht.html
@@ -5,6 +5,24 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Varjupaik: Loomade pesa</h1>
+        <div id='banner'>
+            <div id = 'banner-content'>
+                <table>
+                    <tr>
+                        <td id=pealkiri><h1>Varjupaik: Loomade pesa</h1></td>
+                        <td id=nupud>
+                            <table>
+                                <tr>
+                                    <td ><a id=nupp  href="koerad.html">Koerad</a></td>
+                                    <td ><a id=nupp href="kassid.html">Kassid</a></td>
+                                    <td ><a id=nupp href="info.html">Enne võtmist</a></td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>   
+            </div>
+        </div>
+        
     </body>
 </html>
