--- a/avaleht.html
+++ b/avaleht.html
@@ -5,17 +5,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id='banner'>
+        <div id='banner' class = 'shadow'>
             <div id = 'banner-content'>
-                <table>
+                <table id = bannerlayout>
                     <tr>
                         <td id=pealkiri><h1>Varjupaik: Loomade pesa</h1></td>
                         <td id=nupud>
-                            <table>
+                            <table id=menu>
                                 <tr>
-                                    <td ><a id=nupp  href="koerad.html">Koerad</a></td>
-                                    <td ><a id=nupp href="kassid.html">Kassid</a></td>
-                                    <td ><a id=nupp href="info.html">Enne võtmist</a></td>
+                                    <td id=koerad><a id=nupp  href="koerad.html">Koerad</a></td>
+                                    <td id=kassid><a id=nupp href="kassid.html">Kassid</a></td>
+                                    <td id=info><a id=nupp href="info.html">Enne võtmist</a></td>
                                 </tr>
                             </table>
                         </td>
