muutsin kujundust ja lisasin piltidega nupud loomade lehtede jaoks

--- a/avaleht.html
+++ b/avaleht.html
@@ -3,8 +3,9 @@
     <head>
         <title>Loomade pesa</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="avalehtstyle.css">
     </head>
-    <body>
+    <body style="background-image: url(/pildid/taust.jpg); background-size: auto;">
         <div id='banner' class = 'shadow'>
             <div id = 'banner-content'>
                 <table id = bannerlayout>
@@ -22,6 +23,23 @@
                     </tr>
                 </table>   
             </div>
+        </div>
+        <div id=infotekst>
+            <p style="text-align: center;">Oleme siia erinevatest Eesti varjupaikadest kokku kogunud kodu otsivate loomade andmed.</p>
+        </div>
+        <div id=loomadnupud>
+            <table id=loomadenupud>
+                <tr>
+                    <td><br></td>
+                    <td class=keskelvasakul>
+                        <a href="koerad.html"><img id=piltnupp src="/pildid/koerad.jpg" alt="Koerad"><div class=overlay><img src="/pildid/fade.png" alt="Koeradfade"></div><div class=centered><p id=nuputekst>Vaatan <p id=nupunumber>25</p><p id=nuputekst>koera</p></div></a> 
+                    </td>
+                    <td class=keskelparemal>
+                        <a href="kassid.html"><img id=piltnupp src="/pildid/kassid.jpg" alt="Kassid"><div class=overlay><img src="/pildid/fade.png" alt="Kassidfade"></div><div class=centered><p id=nuputekst>Vaatan <p id=nupunumber>46</p><p id=nuputekst>kassi</p></div></a>
+                    </td>
+                    <td><br></td>
+                </tr>
+            </table>
         </div>
         
     </body>
