panin taustapildi css faili

--- a/avaleht.html
+++ b/avaleht.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="avalehtstyle.css">
     </head>
-    <body style="background-image: url('pildid/taust.jpg'); background-size: auto;">
+    <body class=taustapilt>
         <div id='banner' class = 'shadow'>
             <div id = 'banner-content'>
                 <table id = bannerlayout>
@@ -24,8 +24,8 @@
                 </table>   
             </div>
         </div>
-        <div id=infotekst>
-            <p style="text-align: center;">Oleme siia erinevatest Eesti varjupaikadest kokku kogunud kodu otsivate loomade andmed.</p>
+        <div id=infotekst class>
+            <p>Oleme siia erinevatest Eesti varjupaikadest kokku kogunud kodu otsivate loomade andmed.</p>
         </div>
         <div id=loomadnupud>
             <table id=loomadenupud>
@@ -41,6 +41,9 @@
                 </tr>
             </table>
         </div>
-        
+        <div id=infotekst>
+            <p>Loomade andmed on kogutud järgmistest varjupaikadest:</p>
+
+        </div>
     </body>
 </html>
