--- a/koerad.html
+++ b/koerad.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
 
     </head>
-    <body style="background-image: url('pildid/taust.jpg'); background-size: auto;">
+    <body class=taustapilt>
         <div id='banner' class = 'shadow'>
             <div id = 'banner-content'>
                 <table id = bannerlayout>
