--- a/avaleht.html
+++ b/avaleht.html
@@ -24,11 +24,11 @@
                 </table>   
             </div>
         </div>
-        <div id=infotekst class>
+        <div id=infotekst class=madalamal>
             <p>Oleme siia erinevatest Eesti varjupaikadest kokku kogunud kodu otsivate loomade andmed.</p>
         </div>
-        <div id=loomadnupud>
-            <table id=loomadenupud>
+        <div id=loomadnupud class=kaart>
+            <table id=loomadenupud >
                 <tr>
                     <td><br></td>
                     <td class=keskelvasakul>
@@ -41,9 +41,84 @@
                 </tr>
             </table>
         </div>
+        <br>
         <div id=infotekst>
             <p>Loomade andmed on kogutud järgmistest varjupaikadest:</p>
-
+        </div>
+        <br>
+        <div class=kaart>
+            <table class=kontakttabel>
+                <tr>
+                    <td class=kontakttekstnimi colspan="2"><b>TARTU KODUTUTE LOOMADE VARJUPAIK</b></td>
+                    <td rowspan="5" class=mapedge><div class="mapouter"><div class="gmap_canvas"><iframe height=290px width="100%" id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8364.694567309973!2d26.737534145376685!3d58.390472101442406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eb36c0e21d5a79%3A0x3f644e8de0dd4eb5!2sTartu%20Koduta%20Loomade%20Varjupaik!5e0!3m2!1sen!2see!4v1636901488190!5m2!1sen!2see" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br></div></div></td>
+                </tr>
+                <tr>
+                    <td class="kontakttabelikoon"><img src="pildid/telefon.png" alt="telefon:" class=kontaktikoon></td>
+                    <td class=kontakttekst>53339272 või lühinumber 15400</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/meil.png" alt="meiliaadress:" class=kontaktikoon></td>
+                    <td class=kontakttekst>tartu@loomadevarjupaik.eu</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/asukoht.png" alt="aadress:" class=kontaktikoon></td>
+                    <td class=kontakttekst>Roosi 91K, 51009 Tartu</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/kodu.png" alt="koduleht:" class=kontaktikoon></td>
+                    <td class=kontakttekst><a href="https://www.loomadevarjupaik.eu/">www.loomadevarjupaik.eu</a></td>
+                </tr>
+            </table>
+        </div>
+        <br><br>
+        <div class=kaart>
+            <table class=kontakttabel>
+                <tr>
+                    <td class=kontakttekstnimi colspan="2"><b>TALLINNA VARJUPAIK</b></td>
+                    <td rowspan="5" class=mapedge><div class="mapouter"><div class="gmap_canvas"><iframe height=290px width="100%" id="gmap_canvas"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8107.2424854392575!2d24.707688846130583!3d59.469582507328944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469293bdb31ac8c1%3A0xf3be5be6402ff1ec!2sShelters%20NGO%20Tallinn%20Animal%20Shelter!5e0!3m2!1sen!2see!4v1636900921614!5m2!1sen!2see" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br></div></div></td>
+                </tr>
+                <tr>
+                    <td class="kontakttabelikoon"><img src="pildid/telefon.png" alt="telefon:" class=kontaktikoon></td>
+                    <td class=kontakttekst>+372 5141431</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/meil.png" alt="meiliaadress:" class=kontaktikoon></td>
+                    <td class=kontakttekst>tallinn@varjupaik.ee</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/asukoht.png" alt="aadress:" class=kontaktikoon></td>
+                    <td class=kontakttekst>Paljassaare tee 85, Tallinn, 10313</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/kodu.png" alt="koduleht:" class=kontaktikoon></td>
+                    <td class=kontakttekst><a href="https://varjupaik.ee/et">www.varjupaik.ee</a></td>
+                </tr>
+            </table>
+        </div>
+        <br><br>
+        <div class=kaart>
+            <table class=kontakttabel>
+                <tr>
+                    <td class=kontakttekstnimi colspan="2"><b>VILJANDI VARJUPAIK</b></td>
+                    <td rowspan="5" class=mapedge><div class="mapouter"><div class="gmap_canvas"><iframe height=290px width="100%" id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8369.380867689852!2d25.548151245362973!3d58.37071470133847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ec986ff0b6967b%3A0x964d2bc05cfec6c!2sVarjupaikade%20MT%C3%9C%20Viljandi%20loomade%20varjupaik!5e0!3m2!1sen!2see!4v1636901397516!5m2!1sen!2see" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br></div></div></td>
+                </tr>
+                <tr>
+                    <td class="kontakttabelikoon"><img src="pildid/telefon.png" alt="telefon:" class=kontaktikoon></td>
+                    <td class=kontakttekst>+372 5238626</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/meil.png" alt="meiliaadress:" class=kontaktikoon></td>
+                    <td class=kontakttekst>viljandi@varjupaik.ee</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/asukoht.png" alt="aadress:" class=kontaktikoon></td>
+                    <td class=kontakttekst>Tüma, Mustivere, Viljandi vald, Viljandimaa, 71067</td>
+                </tr>
+                <tr>
+                    <td><img src="pildid/kodu.png" alt="koduleht:" class=kontaktikoon></td>
+                    <td class=kontakttekst><a href="https://varjupaik.ee/et">www.varjupaik.ee</a></td>
+                </tr>
+            </table>
         </div>
     </body>
 </html>
