--- a/koerad.html
+++ b/koerad.html
@@ -1,28 +1,60 @@
 <!DOCTYPE html>
 <html lang="et">
-    <head> 
-        <title>Koerad</title>
-        <link rel="stylesheet" href="style.css">
-
-    </head>
-    <body style="background-image: url('pildid/taust.jpg'); background-size: auto;">
-        <div id='banner' class = 'shadow'>
-            <div id = 'banner-content'>
-                <table id = bannerlayout>
-                    <tr>
-                        <td id=pealkiri><h1>Varjupaik: Loomade pesa</h1></td>
-                        <td id=nupud>
-                            <table id=menu>
-                                <tr>
-                                    <td id=koerad><a id=nupp  href="koerad.html">Koerad</a></td>
-                                    <td id=kassid><a id=nupp href="kassid.html">Kassid</a></td>
-                                    <td id=info><a id=nupp href="info.html">Enne võtmist</a></td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                </table>   
-            </div>
+<head> 
+    <title>Koerad</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="loomad.css">
+</head>
+<body style="background-image: url('pildid/taust.jpg'); background-size: auto;">
+    <div id='banner' class = 'shadow'>
+        <div id = 'banner-content'>
+            <table id = bannerlayout>
+                <tr>
+                    <td id=pealkiri><h1>Varjupaik: Loomade pesa</h1></td>
+                    <td id=nupud>
+                        <table id=menu>
+                            <tr>
+                                <td id=koerad><a id=nupp  href="koerad.html">Koerad</a></td>
+                                <td id=kassid><a id=nupp href="kassid.html">Kassid</a></td>
+                                <td id=info><a id=nupp href="info.html">Enne võtmist</a></td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>   
         </div>
-    </body>
+    </div>
+    <div class="gallery">
+        <div class="animal">
+            <img src="pildid/koerad/hell2.jpg">
+            <div class="desc">Hellä</div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/paul.jpg">
+            <div class="desc">Paul</div>
+
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/laki.jpg">
+            <div class="desc">Laki</div>
+
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/siimeon.jpg">
+            <div class="desc">Siimeon</div>
+
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/h2pi.jpg">
+            <div class="desc">Häpi</div>
+
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/arvo.jpg">
+            <div class="desc">Arvo</div>
+
+        </div>
+        
+    </div>
+</body>
 </html>
