--- a/koerad.html
+++ b/koerad.html
@@ -10,7 +10,7 @@
         <div id = 'banner-content'>
             <table id = bannerlayout>
                 <tr>
-                    <td id=pealkiri><h1>Varjupaik: Loomade pesa</h1></td>
+                    <td id=pealkiri><a href="avaleht.html"><h1>Varjupaik: Loomade pesa</h1></a></td>
                     <td id=nupud>
                         <table id=menu>
                             <tr>
@@ -26,33 +26,83 @@
     </div>
     <div class="gallery">
         <div class="animal">
-            <img src="pildid/koerad/hell2.jpg">
-            <div class="desc">Hellä</div>
+            <a href="pildid/koerad/alfi.jpg" target="_blank"><img src="pildid/koerad/alfi.jpg"></a>
+            <div class="desc">ALFI<p>Tartu Koduta Loomade Varjupaik</p></div>
         </div>
         <div class="animal">
-            <img src="pildid/koerad/paul.jpg">
-            <div class="desc">Paul</div>
+            <img src="pildid/koerad/bars.jpg">
+            <div class="desc">BARS <p>Tartu Koduta Loomade Varjupaik</p></div>
 
         </div>
         <div class="animal">
-            <img src="pildid/koerad/laki.jpg">
-            <div class="desc">Laki</div>
+            <img src="pildid/koerad/dona.jpg">
+            <div class="desc">DONNA<p>Tartu Koduta Loomade Varjupaik</p></div>
 
         </div>
         <div class="animal">
-            <img src="pildid/koerad/siimeon.jpg">
-            <div class="desc">Siimeon</div>
+            <img src="pildid/koerad/k2tu.jpg">
+            <div class="desc">KÄTU<p>Tartu Koduta Loomade Varjupaik</p></div>
 
         </div>
+    
         <div class="animal">
-            <img src="pildid/koerad/h2pi.jpg">
-            <div class="desc">Häpi</div>
-
-        </div>
-        <div class="animal">
-            <img src="pildid/koerad/arvo.jpg">
-            <div class="desc">Arvo</div>
+            <img src="pildid/koerad/kutt.jpg">
+            <div class="desc">KUTT<p>Tartu Koduta Loomade Varjupaik</p></div>
     
         </div>
+        <div class="animal">
+            <img src="pildid/koerad/malviina.jpg">
+            <div class="desc">MALVIINA<p>Tartu Koduta Loomade Varjupaik</p></div>
+
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/mauri.jpg">
+            <div class="desc">MAURI<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/meida.jpg">
+            <div class="desc">MEIDA<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/naima.jpg">
+            <div class="desc">NAIMA<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/paavel.jpg">
+            <div class="desc">PAAVEL<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/poiss.jpg">
+            <div class="desc">POISS<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/polster.jpg">
+            <div class="desc">POLSTER<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/renate.jpg">
+            <div class="desc">RENATE<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/sammy.jpg">
+            <div class="desc">SAMMY<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/sihvka.jpg">
+            <div class="desc">SIHVKA<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/timmi.jpg">
+            <div class="desc">TIMMI<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/triinu.jpg">
+            <div class="desc">TRIINU<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+        <div class="animal">
+            <img src="pildid/koerad/välek.jpg">
+            <div class="desc">VÄLEK<p>Tartu Koduta Loomade Varjupaik</p></div>
+        </div>
+
 </body>
 </html>
