--- a/kassid.html
+++ b/kassid.html
@@ -10,7 +10,7 @@
             <div id = 'banner-content'>
                 <table id = bannerlayout>
                     <tr>
-                        <td id=pealkiri><h1>Varjupaik: Loomade pesa</h1></td>
+                        <td id=pealkiri><a href="avaleht.html"><h1>Varjupaik: Loomade pesa</h1></a></td>
                         <td id=nupud>
                             <table id=menu>
                                 <tr>
