koerte galerii animatsioonidega

--- a/koerad.html
+++ b/koerad.html
@@ -25,83 +25,113 @@
         </div>
     </div>
     <div class="gallery">
-        <div class="animal">
-            <a href="pildid/koerad/alfi.jpg" target="_blank"><img src="pildid/koerad/alfi.jpg"></a>
-            <div class="desc">ALFI<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/alfi.jpg)">
+            <div class="content">
+                <h2 class="name">ALFI</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/bars.jpg">
-            <div class="desc">BARS <p>Tartu Koduta Loomade Varjupaik</p></div>
-
+        <div class="animal" style="--bg: url(pildid/koerad/bars.jpg)">
+            <div class="content">
+                <h2 class="name">BARS</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/dona.jpg">
-            <div class="desc">DONNA<p>Tartu Koduta Loomade Varjupaik</p></div>
-
+        <div class="animal" style="--bg: url(pildid/koerad/dona.jpg)">
+            <div class="content">
+                <h2 class="name">DONA</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/k2tu.jpg">
-            <div class="desc">KÄTU<p>Tartu Koduta Loomade Varjupaik</p></div>
-
+        <div class="animal" style="--bg: url(pildid/koerad/k2tu.jpg)">
+            <div class="content">
+                <h2 class="name">KÄTU</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-    
-        <div class="animal">
-            <img src="pildid/koerad/kutt.jpg">
-            <div class="desc">KUTT<p>Tartu Koduta Loomade Varjupaik</p></div>
-    
+        <div class="animal" style="--bg: url(pildid/koerad/kutt.jpg)">
+            <div class="content">
+                <h2 class="name">KUTT</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/malviina.jpg">
-            <div class="desc">MALVIINA<p>Tartu Koduta Loomade Varjupaik</p></div>
-
+        <div class="animal" style="--bg: url(pildid/koerad/malviina.jpg)">
+            <div class="content">
+                <h2 class="name">MALVIINA</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/mauri.jpg">
-            <div class="desc">MAURI<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/mauri.jpg)">
+            <div class="content">
+                <h2 class="name">MAURI</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/meida.jpg">
-            <div class="desc">MEIDA<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/meida.jpg)">
+            <div class="content">
+                <h2 class="name">MEIDA</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/naima.jpg">
-            <div class="desc">NAIMA<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/naima.jpg)">
+            <div class="content">
+                <h2 class="name">NAIMA</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/paavel.jpg">
-            <div class="desc">PAAVEL<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/paavel.jpg)">
+            <div class="content">
+                <h2 class="name">PAAVEL</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/poiss.jpg">
-            <div class="desc">POISS<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/poiss.jpg)">
+            <div class="content">
+                <h2 class="name">POISS</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/polster.jpg">
-            <div class="desc">POLSTER<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/polster.jpg)">
+            <div class="content">
+                <h2 class="name">POLSTER</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/renate.jpg">
-            <div class="desc">RENATE<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/renate.jpg)">
+            <div class="content">
+                <h2 class="name">RENATE</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/sammy.jpg">
-            <div class="desc">SAMMY<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/sammy.jpg)">
+            <div class="content">
+                <h2 class="name">SAMMY</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/sihvka.jpg">
-            <div class="desc">SIHVKA<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/sihvka.jpg)">
+            <div class="content">
+                <h2 class="name">SIHVKA</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/timmi.jpg">
-            <div class="desc">TIMMI<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/timmi.jpg)">
+            <div class="content">
+                <h2 class="name">TIMMI</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/triinu.jpg">
-            <div class="desc">TRIINU<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/triinu.jpg)">
+            <div class="content">
+                <h2 class="name">TRIINU</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
-        <div class="animal">
-            <img src="pildid/koerad/välek.jpg">
-            <div class="desc">VÄLEK<p>Tartu Koduta Loomade Varjupaik</p></div>
+        <div class="animal" style="--bg: url(pildid/koerad/välek.jpg)">
+            <div class="content">
+                <h2 class="name">VÄLEK</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
         </div>
 
 </body>
