--- a/kassid.html
+++ b/kassid.html
@@ -3,7 +3,7 @@
     <head> 
         <title>Kassid</title>
         <link rel="stylesheet" href="style.css">
-
+        <link rel="stylesheet" href="loomad.css">
     </head>
     <body class=taustapilt>
         <div id='banner' class = 'shadow'>
@@ -23,6 +23,99 @@
                     </tr>
                 </table>   
             </div>
+        </div>
+        <div class="gallery">
+            <div class="animal" style="--bg: url(pildid/kassid/cataleya.jpg)">
+                <div class="content">
+                    <h2 class="name">CATALEYA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/danpoldroos.jpg)">
+                <div class="content">
+                    <h2 class="name">DAN PÕLDROOS</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/kiisumiisu.jpg)">
+                <div class="content">
+                    <h2 class="name">KIISU-MIISU</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/krista.jpg)">
+                <div class="content">
+                    <h2 class="name">KRISTA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/madli.jpg)">
+                <div class="content">
+                    <h2 class="name">MADLI</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/maiu.jpg)">
+                <div class="content">
+                    <h2 class="name">MAIU</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/palle.jpg)">
+                <div class="content">
+                    <h2 class="name">PALLE</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/queenie.jpg)">
+                <div class="content">
+                    <h2 class="name">QUEENIE</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/raivo.jpg)">
+                <div class="content">
+                    <h2 class="name">RAIVO</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/risto.jpg)">
+                <div class="content">
+                    <h2 class="name">RISTO</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/solaris.jpg)">
+                <div class="content">
+                    <h2 class="name">SOLARIS</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/tiiu.jpg)">
+                <div class="content">
+                    <h2 class="name">TIIU</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/tinka.jpg)">
+                <div class="content">
+                    <h2 class="name">TINKA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/tipa.jpg)">
+                <div class="content">
+                    <h2 class="name">TIPA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/tommi.jpg)">
+                <div class="content">
+                    <h2 class="name">TOMMI</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            
         </div>
     </body>
 </html>
