tartu varjupaiga kassid

--- a/koerad.html
+++ b/koerad.html
@@ -37,6 +37,12 @@
                 <p class="desc">Tartu Koduta Loomade Varjupaik</p>
             </div>
         </div>
+        <div class="animal" style="--bg: url(pildid/koerad/bruno.jpg)">
+            <div class="content">
+                <h2 class="name">BRUNO</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
+        </div>
         <div class="animal" style="--bg: url(pildid/koerad/dona.jpg)">
             <div class="content">
                 <h2 class="name">DONA</h2>
@@ -46,6 +52,12 @@
         <div class="animal" style="--bg: url(pildid/koerad/k2tu.jpg)">
             <div class="content">
                 <h2 class="name">KÄTU</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
+        </div>
+        <div class="animal" style="--bg: url(pildid/koerad/kusti.jpg)">
+            <div class="content">
+                <h2 class="name">KUSTI</h2>
                 <p class="desc">Tartu Koduta Loomade Varjupaik</p>
             </div>
         </div>
@@ -97,15 +109,39 @@
                 <p class="desc">Tartu Koduta Loomade Varjupaik</p>
             </div>
         </div>
+        <div class="animal" style="--bg: url(pildid/koerad/poncik.jpg)">
+            <div class="content">
+                <h2 class="name">PONCIK</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
+        </div>
         <div class="animal" style="--bg: url(pildid/koerad/renate.jpg)">
             <div class="content">
                 <h2 class="name">RENATE</h2>
                 <p class="desc">Tartu Koduta Loomade Varjupaik</p>
             </div>
         </div>
+        <div class="animal" style="--bg: url(pildid/koerad/rex.jpg)">
+            <div class="content">
+                <h2 class="name">REX</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
+        </div>
+        <div class="animal" style="--bg: url(pildid/koerad/robi.jpg)">
+            <div class="content">
+                <h2 class="name">ROBI</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
+        </div>
         <div class="animal" style="--bg: url(pildid/koerad/sammy.jpg)">
             <div class="content">
                 <h2 class="name">SAMMY</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
+        </div>
+        <div class="animal" style="--bg: url(pildid/koerad/semu.jpg)">
+            <div class="content">
+                <h2 class="name">SEMU</h2>
                 <p class="desc">Tartu Koduta Loomade Varjupaik</p>
             </div>
         </div>
@@ -130,6 +166,18 @@
         <div class="animal" style="--bg: url(pildid/koerad/välek.jpg)">
             <div class="content">
                 <h2 class="name">VÄLEK</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
+        </div>
+        <div class="animal" style="--bg: url(pildid/koerad/vello.jpg)">
+            <div class="content">
+                <h2 class="name">VELLO</h2>
+                <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+            </div>
+        </div>
+        <div class="animal" style="--bg: url(pildid/koerad/volli.jpg)">
+            <div class="content">
+                <h2 class="name">VOLLI</h2>
                 <p class="desc">Tartu Koduta Loomade Varjupaik</p>
             </div>
         </div>
