--- a/kassid.html
+++ b/kassid.html
@@ -25,9 +25,33 @@
             </div>
         </div>
         <div class="gallery">
+            <div class="animal" style="--bg: url(pildid/kassid/annabel.jpg)">
+                <div class="content">
+                    <h2 class="name">ANNABEL</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/baruto.jpg)">
+                <div class="content">
+                    <h2 class="name">BARUTO</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/belks.jpg)">
+                <div class="content">
+                    <h2 class="name">BELKS</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
             <div class="animal" style="--bg: url(pildid/kassid/cataleya.jpg)">
                 <div class="content">
                     <h2 class="name">CATALEYA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/daniel.jpg)">
+                <div class="content">
+                    <h2 class="name">DANIEL</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
@@ -37,15 +61,51 @@
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
+            <div class="animal" style="--bg: url(pildid/kassid/fjodor.jpg)">
+                <div class="content">
+                    <h2 class="name">FJODOR</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/frederika.jpg)">
+                <div class="content">
+                    <h2 class="name">FREDERIKA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/kata.jpg)">
+                <div class="content">
+                    <h2 class="name">KATA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
             <div class="animal" style="--bg: url(pildid/kassid/kiisumiisu.jpg)">
                 <div class="content">
                     <h2 class="name">KIISU-MIISU</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
+            <div class="animal" style="--bg: url(pildid/kassid/kosta.jpg)">
+                <div class="content">
+                    <h2 class="name">KOSTA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
             <div class="animal" style="--bg: url(pildid/kassid/krista.jpg)">
                 <div class="content">
                     <h2 class="name">KRISTA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/leelo.jpg)">
+                <div class="content">
+                    <h2 class="name">LEELO</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/lenna.jpg)">
+                <div class="content">
+                    <h2 class="name">LENNA</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
@@ -61,9 +121,99 @@
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
+            <div class="animal" style="--bg: url(pildid/kassid/mannu.jpg)">
+                <div class="content">
+                    <h2 class="name">MANNU</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/martin.jpg)">
+                <div class="content">
+                    <h2 class="name">MARTIN</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/mary.jpg)">
+                <div class="content">
+                    <h2 class="name">MARY</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/maximus.jpg)">
+                <div class="content">
+                    <h2 class="name">MAXIMUS</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/melania.jpg)">
+                <div class="content">
+                    <h2 class="name">MELANIA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/miku.jpg)">
+                <div class="content">
+                    <h2 class="name">MIKU</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/neti.jpg)">
+                <div class="content">
+                    <h2 class="name">NETI</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/niki.jpg)">
+                <div class="content">
+                    <h2 class="name">NIKI</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/oriana.jpg)">
+                <div class="content">
+                    <h2 class="name">ORIANA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
             <div class="animal" style="--bg: url(pildid/kassid/palle.jpg)">
                 <div class="content">
                     <h2 class="name">PALLE</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/pandora.jpg)">
+                <div class="content">
+                    <h2 class="name">PANDORA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/paul.jpg)">
+                <div class="content">
+                    <h2 class="name">PAUL</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/paula.jpg)">
+                <div class="content">
+                    <h2 class="name">PAULA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/pelageja.jpg)">
+                <div class="content">
+                    <h2 class="name">PELAGEJA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/pirjo.jpg)">
+                <div class="content">
+                    <h2 class="name">PIRJO</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/pirtsu.jpg)">
+                <div class="content">
+                    <h2 class="name">PIRTSU</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
@@ -85,9 +235,75 @@
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
+            <div class="animal" style="--bg: url(pildid/kassid/saale.jpg)">
+                <div class="content">
+                    <h2 class="name">SAALE</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/saima.jpg)">
+                <div class="content">
+                    <h2 class="name">SAIMA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/sass.jpg)">
+                <div class="content">
+                    <h2 class="name">SASS</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/selina.jpg)">
+                <div class="content">
+                    <h2 class="name">SELINA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/signe.jpg)">
+                <div class="content">
+                    <h2 class="name">SIGNE</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/siim.jpg)">
+                <div class="content">
+                    <h2 class="name">SIIM</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/sille.jpg)">
+                <div class="content">
+                    <h2 class="name">SILLE</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/sirle.jpg)">
+                <div class="content">
+                    <h2 class="name">SIRLE</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
             <div class="animal" style="--bg: url(pildid/kassid/solaris.jpg)">
                 <div class="content">
                     <h2 class="name">SOLARIS</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/susanna.jpg)">
+                <div class="content">
+                    <h2 class="name">SUSANNA</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/süsi.jpg)">
+                <div class="content">
+                    <h2 class="name">SÜSI</h2>
+                    <p class="desc">Tartu Koduta Loomade Varjupaik</p>
+                </div>
+            </div>
+            <div class="animal" style="--bg: url(pildid/kassid/suss.jpg)">
+                <div class="content">
+                    <h2 class="name">SUSS</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
