loomade lehtede kujundus

--- a/kassid.html
+++ b/kassid.html
@@ -24,7 +24,9 @@
                 </table>   
             </div>
         </div>
+        <h1 class="title">Kassid kodu ootel</h1>
         <div class="gallery">
+            <div class="pildid">
             <div class="animal" style="--bg: url(pildid/kassid/annabel.jpg)">
                 <div class="content">
                     <h2 class="name">ANNABEL</h2>
@@ -332,6 +334,7 @@
                 </div>
             </div>
             
+        </div>
         </div>
     </body>
 </html>
