--- a/avaleht.html
+++ b/avaleht.html
@@ -120,5 +120,12 @@
                 </tr>
             </table>
         </div>
+        <br>
+        <br>
+        <div id=footer>
+            <div id=footer-content>
+                <p class= footertekst>See lehekülg valmis sissejuhatus erialasse projekti raames</p>
+            </div>
+        </div>    
     </body>
 </html>
