footer korrasgit add . ja panin naljafondi loomadele hihi

--- a/avaleht.html
+++ b/avaleht.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="et">
+<meta charset="UTF-8">
+
     <head>
         <title>Loomade pesa</title>
         <link rel="stylesheet" href="style.css">
