--- a/kassid.html
+++ b/kassid.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="et">
+<meta charset="UTF-8">
+
     <head> 
         <title>Kassid</title>
         <link rel="stylesheet" href="style.css">
@@ -336,5 +338,12 @@
             
         </div>
         </div>
+        <br>
+        <br>
+        <div id=footer>
+            <div id=footer-content>
+                <p class= footertekst>See lehekülg valmis sissejuhatus erialasse projekti raames</p>
+            </div>
+        </div>    
     </body>
 </html>
