--- a/koerad.html
+++ b/koerad.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="et">
-<head> 
+<meta charset="UTF-8">
+<head>
     <title>Koerad</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="loomad.css">
@@ -187,5 +188,12 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <div id=footer>
+        <div id=footer-content>
+            <p class= footertekst>See lehekülg valmis sissejuhatus erialasse projekti raames</p>
+        </div>
+    </div>    
 </body>
 </html>
